[release] v9.1 Public Release

--- a/System/KFMapVote.ini
+++ b/System/KFMapVote.ini
@@ -1,5 +1,5 @@
-[KFMapVoteV2.KFVotingHandler]
-VoteTimeLimit=70
+[KFMapVoteV3.KFVotingHandler]
+VoteTimeLimit=60
 ScoreBoardDelay=5
 bAutoOpen=True
 MidGameVotePercent=50
@@ -16,7 +16,7 @@ bKickVote=False
 bMatchSetup=False
 KickPercent=51
 bAnonymousKicking=False
-MapListLoaderType=xVoting.DefaultMapListLoader
+MapListLoaderType=KFMapVoteV3.KFXMapListLoader
 ServerNumber=1
 CurrentGameConfig=1
 GameConfig=(GameClass="KFMod.KFGameType",Prefix="KF-",Acronym="KF-",GameName="0. Hard",Mutators="MutLoader.MutLoader",Options="Difficulty=4")
