--- a/System/MutLoaderV2.ini
+++ b/System/MutLoaderV2.ini
@@ -3,7 +3,7 @@
 [Settings1 MutLoaderObject]
 GameTypeName=KFGameType
 GameDifficulty=1.0
-ServerName=NANU NANU CULT | [EU] | BEGINNER | Vanilla WL
+ServerName=NANU NANU CULT | [EU] | BEGINNER | WL
 Mutator=
 
 [Settings2 MutLoaderObject]
