--- a/System/ServerAdsKF.ini
+++ b/System/ServerAdsKF.ini
@@ -1,23 +1,23 @@
 [ServerAdsKF.ServerAdsKF]
 bEnabled=True
 fDelay=100.000000
-sLines[0]=%rServer Hosted by Vel-San, Contact on Steam for Support
-sLines[1]=%oWant to be %bViP %w? join the %bSteam Group: %w/groups/%gNanu-Nanu %w& be a constant player on the server!
-sLines[2]=%oNo Cheating, Griefing or BMing! This will result in a perma-ban (IP + SteamID)
-sLines[3]=%oAlways Stay Grouped!
-sLines[4]=%oServer Has Custom Maps
-sLines[5]=%oServer Has Difficulty Votes
-sLines[6]=%oPlayer Outfits in the %g'Misc'%o section of the trader shop
-sLines[7]=%oType %g'mutate sb help'%w in your console to get %gSoundBoard%w help
-sLines[8]=%oType %g'mutate st help'%w in your console to get %gServerTools%w help
-sLines[9]=%oAll DLC Weapons Unlocked
-sLines[10]=%rServer is NOT White-listed!
-sLines[11]=# SHARE THE NANU NANU KNOWLEDGE, LET THE CULT GROW!
-sLines[12]=
-sLines[13]=
-sLines[14]=
-sLines[15]=
-sLines[16]=
+sLines[0]=%rServer Hosted by %wVel-San%r - Contact on Steam for Support
+sLines[1]=%tWant to be %wViP %t? join the Steam Group: %w/groups/%gNanu-Nanu %t& be a constant player on the server!
+sLines[2]=%tNo Cheating/Griefing/BMing! This will result in a perma-ban (%wIP%t + %tSteamID%w)
+sLines[3]=%tRemember: Always Stay Grouped!
+sLines[4]=%tServer Has Custom Maps
+sLines[5]=%tServer Has Difficulty Votes
+sLines[6]=%tPlayer outfits in the %w'Misc'%t section of the trader shop
+sLines[7]=%tType %w'mutate st help'%t in your console to get %tServerTools%w help
+sLines[8]=%tAll DLC Weapons Unlocked
+sLines[9]=%tServer is NOT White-listed!
+sLines[10]=# SHARE THE NANU NANU KNOWLEDGE, LET THE CULT GROW!
+sLines[11]=%tYou can modify your %w'Reload Options' %tin your %w'ESC-Menu'
+sLines[12]=%tMax Perks level is %w10!%t Grind Hard and share your progress in the group <3!
+sLines[13]=%tServer has Achievments!
+sLines[14]=%tTo rage a %wFleshpound%t... or to not rage a %wFleshpound%t... That is indeed the question.
+sLines[15]=%tWant more custom maps? Head to the %wServer group%t and request it!
+sLines[16]=%tAre you a %wFucking Bind Spammer?%t BECAUSE YOU BETTER BE!
 sLines[17]=
 sLines[18]=
 sLines[19]=
@@ -29,7 +29,7 @@ sLines[24]=
 iGroupSize=1
 iAdType=0
 bWrapAround=True
-iAdminMsgDuration=4
+iAdminMsgDuration=5
 cAdminMsgColor=(B=255,G=191,R=0,A=127)
 bUseURL=False
 bDebug=False
@@ -43,4 +43,5 @@ ColorList=(ColorName="Green",ColorTag="%g",Color=(B=0,G=200,R=0,A=0))
 ColorList=(ColorName="Blue",ColorTag="%b",Color=(B=200,G=100,R=0,A=0))
 ColorList=(ColorName="Violet",ColorTag="%v",Color=(B=139,G=0,R=255,A=0))
 ColorList=(ColorName="White",ColorTag="%w",Color=(B=200,G=200,R=200,A=0))
+ColorList=(ColorName="Teal",ColorTag="%t",Color=(B=113,G=179,R=60,A=0))
 
