--- a/System/ServerPerks.ini
+++ b/System/ServerPerks.ini
@@ -16,13 +16,13 @@ bForceGivePerk=True
 bNoSavingProgress=False
 bUseRemoteDatabase=False
 bUsePlayerNameAsID=False
-bMessageAnyPlayerLevelUp=False
+bMessageAnyPlayerLevelUp=True
 bNoPerkChanges=False
 bUseLowestRequirements=False
-bBWZEDTime=True
+bBWZEDTime=False
 bUseEnhancedScoreboard=True
 bOverrideUnusedCustomStats=False
-bAllowAlwaysPerkChanges=True
+bAllowAlwaysPerkChanges=False
 bEnableWebAdmin=True
 bForceCustomChars=False
 bEnableChatIcons=True
@@ -156,7 +156,7 @@ WeaponCategories=7:Misc
 SmileyTags=(iconTexture="ServerPerks.I_Mad",IconTag=">:(",bCaseInsensitive=False)
 SmileyTags=(iconTexture="ServerPerks.I_Frown",IconTag=":(",bCaseInsensitive=False)
 SmileyTags=(iconTexture="ServerPerks.I_GreenLickB",IconTag=":)",bCaseInsensitive=False)
-SmileyTags=(iconTexture="ServerPerks.I_Tongue",IconTag=":P",bCaseInsensitive=True)
+SmileyTags=(iconTexture="ServerPerks.I_Tongue",IconTag=":P",bCaseInsensitive=False)
 SmileyTags=(iconTexture="ServerPerks.I_GreenLick",IconTag=":d",bCaseInsensitive=False)
 SmileyTags=(iconTexture="ServerPerks.I_BigGrin",IconTag=":D",bCaseInsensitive=False)
 SmileyTags=(iconTexture="ServerPerks.I_Indiffe",IconTag=":|",bCaseInsensitive=False)
