[release] v9.1.1 Public Release

--- a/System/KFMapVote.ini
+++ b/System/KFMapVote.ini
@@ -18,30 +18,12 @@ KickPercent=51
 bAnonymousKicking=False
 MapListLoaderType=KFMapVoteV3.KFXMapListLoader
 ServerNumber=1
-CurrentGameConfig=1
+CurrentGameConfig=2
 GameConfig=(GameClass="KFMod.KFGameType",Prefix="KF-",Acronym="KF-",GameName="0. Hard",Mutators="MutLoader.MutLoader",Options="Difficulty=4")
-GameConfig=(GameClass="KFMod.KFGameType",Prefix="KF-",Acronym="KF-",GameName="0. Hard - 1F",Mutators="MutLoader.MutLoader,FakedPlus.Faked_1",Options="Difficulty=4")
-GameConfig=(GameClass="KFMod.KFGameType",Prefix="KF-",Acronym="KF-",GameName="0. Hard - 2F",Mutators="MutLoader.MutLoader,FakedPlus.Faked_2",Options="Difficulty=4")
-GameConfig=(GameClass="KFMod.KFGameType",Prefix="KF-",Acronym="KF-",GameName="0. Hard - 3F",Mutators="MutLoader.MutLoader,FakedPlus.Faked_3",Options="Difficulty=4")
 GameConfig=(GameClass="KFMod.KFGameType",Prefix="KF-",Acronym="KF-",GameName="1. Suicidal",Mutators="MutLoader.MutLoader",Options="Difficulty=5")
-GameConfig=(GameClass="KFMod.KFGameType",Prefix="KF-",Acronym="KF-",GameName="1. Suicidal - 1F",Mutators="MutLoader.MutLoader,FakedPlus.Faked_1",Options="Difficulty=5")
-GameConfig=(GameClass="KFMod.KFGameType",Prefix="KF-",Acronym="KF-",GameName="1. Suicidal - 2F",Mutators="MutLoader.MutLoader,FakedPlus.Faked_2",Options="Difficulty=5")
-GameConfig=(GameClass="KFMod.KFGameType",Prefix="KF-",Acronym="KF-",GameName="1. Suicidal - 3F",Mutators="MutLoader.MutLoader,FakedPlus.Faked_3",Options="Difficulty=5")
 GameConfig=(GameClass="KFMod.KFGameType",Prefix="KF-",Acronym="KF-",GameName="2. HoE",Mutators="MutLoader.MutLoader",Options="Difficulty=7")
-GameConfig=(GameClass="KFMod.KFGameType",Prefix="KF-",Acronym="KF-",GameName="2. HoE - 1F",Mutators="MutLoader.MutLoader,FakedPlus.Faked_1",Options="Difficulty=7")
-GameConfig=(GameClass="KFMod.KFGameType",Prefix="KF-",Acronym="KF-",GameName="2. HoE - 2F",Mutators="MutLoader.MutLoader,FakedPlus.Faked_2",Options="Difficulty=7")
-GameConfig=(GameClass="KFMod.KFGameType",Prefix="KF-",Acronym="KF-",GameName="2. HoE - 3F",Mutators="MutLoader.MutLoader,FakedPlus.Faked_3",Options="Difficulty=7")
 GameConfig=(GameClass="KFNFN.NFNGameType",Prefix="KF-",Acronym="KF-",GameName="3. NFN-Hard",Mutators="MutLoader.MutLoader",Options="Difficulty=4")
-GameConfig=(GameClass="KFNFN.NFNGameType",Prefix="KF-",Acronym="KF-",GameName="3. NFN-Hard - 1F",Mutators="MutLoader.MutLoader,FakedPlus.Faked_1",Options="Difficulty=4")
-GameConfig=(GameClass="KFNFN.NFNGameType",Prefix="KF-",Acronym="KF-",GameName="3. NFN-Hard - 2F",Mutators="MutLoader.MutLoader,FakedPlus.Faked_2",Options="Difficulty=4")
-GameConfig=(GameClass="KFNFN.NFNGameType",Prefix="KF-",Acronym="KF-",GameName="3. NFN-Hard - 3F",Mutators="MutLoader.MutLoader,FakedPlus.Faked_3",Options="Difficulty=4")
 GameConfig=(GameClass="KFNFN.NFNGameType",Prefix="KF-",Acronym="KF-",GameName="4. NFN-Suicidal",Mutators="MutLoader.MutLoader",Options="Difficulty=5")
-GameConfig=(GameClass="KFNFN.NFNGameType",Prefix="KF-",Acronym="KF-",GameName="4. NFN-Suicidal - 1F",Mutators="MutLoader.MutLoader,FakedPlus.Faked_1",Options="Difficulty=5")
-GameConfig=(GameClass="KFNFN.NFNGameType",Prefix="KF-",Acronym="KF-",GameName="4. NFN-Suicidal - 2F",Mutators="MutLoader.MutLoader,FakedPlus.Faked_2",Options="Difficulty=5")
-GameConfig=(GameClass="KFNFN.NFNGameType",Prefix="KF-",Acronym="KF-",GameName="4. NFN-Suicidal - 3F",Mutators="MutLoader.MutLoader,FakedPlus.Faked_3",Options="Difficulty=5")
 GameConfig=(GameClass="KFNFN.NFNGameType",Prefix="KF-",Acronym="KF-",GameName="5. NFN-HoE",Mutators="MutLoader.MutLoader",Options="Difficulty=7")
-GameConfig=(GameClass="KFNFN.NFNGameType",Prefix="KF-",Acronym="KF-",GameName="5. NFN-HoE - 1F",Mutators="MutLoader.MutLoader,FakedPlus.Faked_1",Options="Difficulty=7")
-GameConfig=(GameClass="KFNFN.NFNGameType",Prefix="KF-",Acronym="KF-",GameName="5. NFN-HoE - 2F",Mutators="MutLoader.MutLoader,FakedPlus.Faked_2",Options="Difficulty=7")
-GameConfig=(GameClass="KFNFN.NFNGameType",Prefix="KF-",Acronym="KF-",GameName="5. NFN-HoE - 3F",Mutators="MutLoader.MutLoader,FakedPlus.Faked_3",Options="Difficulty=7")
-GameConfig=(GameClass="KFMod.KFGameType",Prefix="KF-",Acronym="KF-",GameName="6. Beginner - Vanilla [Perk Progression Enabled]",Mutators="MutLoader.MutLoader",Options="Difficulty=1")
+GameConfig=(GameClass="KFMod.KFGameType",Prefix="KF-",Acronym="KF-",GameName="6. Beginner - Vanilla/Testing Purposes",Mutators="MutLoader.MutLoader",Options="Difficulty=1")
 
