--- a/System/ServerAdsKF.ini
+++ b/System/ServerAdsKF.ini
@@ -3,12 +3,12 @@ bEnabled=True
 fDelay=100.000000
 sLines[0]=%rServer Hosted by %wVel-San%r - Contact on Steam for Support
 sLines[1]=%tWant to be %wViP %t? join the Steam Group: %w/groups/%gNanu-Nanu %t& be a constant player on the server!
-sLines[2]=%tNo Cheating/Griefing/BMing! This will result in a perma-ban (%wIP%t + %tSteamID%w)
+sLines[2]=%tNo Cheating/Griefing/BMing! This will result in a perma-ban (%wIP%t + %wSteamID%t)
 sLines[3]=%tRemember: Always Stay Grouped!
 sLines[4]=%tServer Has Custom Maps
 sLines[5]=%tServer Has Difficulty Votes
 sLines[6]=%tPlayer outfits in the %w'Misc'%t section of the trader shop
-sLines[7]=%tType %w'mutate st help'%t in your console to get %tServerTools%w help
+sLines[7]=%tType %w'mutate st help'%t in your console to get %wServerTools%t help
 sLines[8]=%tAll DLC Weapons Unlocked
 sLines[9]=%tServer is NOT White-listed!
 sLines[10]=# SHARE THE NANU NANU KNOWLEDGE, LET THE CULT GROW!
