--- a/System/MutLoaderV2.ini
+++ b/System/MutLoaderV2.ini
@@ -1,15 +1,19 @@
 [MutLoaderV2.MutLoader]
 
 [Settings1 MutLoaderObject]
-GameTypeName=KFGameType
-GameDifficulty=1.0
-ServerName=NANU NANU CULT | [EU] | BEGINNER | WL
+sGameTypeName=KFGameType
+fGameDifficulty=1.0
+bAppendFaked=false
+bUpdateServerName=true
+sServerName=NANU NANU CULT | [EU] | BEGINNER | WL
 Mutator=
 
 [Settings2 MutLoaderObject]
-GameTypeName=KFGameType
-GameDifficulty=4.0
-ServerName=NANU NANU CULT | [EU] | HARD
+sGameTypeName=KFGameType
+fGameDifficulty=4.0
+bAppendFaked=false
+bUpdateServerName=true
+sServerName=NANU NANU CULT | [EU] | HARD
 Mutator=CleanAppIDMut.CleanAppIDMut
 Mutator=ServerTools.ServerTools
 Mutator=AutoCallOut.AutoCallOut
@@ -37,9 +41,11 @@ Mutator=HUDEffects.HUDEffects
 Mutator=ServerAchievements.SAMutator
 
 [Settings3 MutLoaderObject]
-GameTypeName=KFGameType
-GameDifficulty=5.0
-ServerName=NANU NANU CULT | [EU] | SUICIDAL
+sGameTypeName=KFGameType
+fGameDifficulty=5.0
+bAppendFaked=false
+bUpdateServerName=true
+sServerName=NANU NANU CULT | [EU] | SUICIDAL
 Mutator=CleanAppIDMut.CleanAppIDMut
 Mutator=ServerTools.ServerTools
 Mutator=AutoCallOut.AutoCallOut
@@ -67,9 +73,11 @@ Mutator=HUDEffects.HUDEffects
 Mutator=ServerAchievements.SAMutator
 
 [Settings4 MutLoaderObject]
-GameTypeName=KFGameType
-GameDifficulty=7.0
-ServerName=NANU NANU CULT | [EU] | HELL ON EARTH
+sGameTypeName=KFGameType
+fGameDifficulty=7.0
+bAppendFaked=false
+bUpdateServerName=true
+sServerName=NANU NANU CULT | [EU] | HELL ON EARTH
 Mutator=CleanAppIDMut.CleanAppIDMut
 Mutator=ServerTools.ServerTools
 Mutator=AutoCallOut.AutoCallOut
@@ -97,9 +105,11 @@ Mutator=HUDEffects.HUDEffects
 Mutator=ServerAchievements.SAMutator
 
 [Settings5 MutLoaderObject]
-GameTypeName=NFNGameType
-GameDifficulty=4.0
-ServerName=NANU NANU CULT | [EU] | NFN-HARD
+sGameTypeName=NFNGameType
+fGameDifficulty=4.0
+bAppendFaked=false
+bUpdateServerName=true
+sServerName=NANU NANU CULT | [EU] | NFN-HARD
 Mutator=CleanAppIDMut.CleanAppIDMut
 Mutator=ServerTools.ServerTools
 Mutator=AutoCallOut.AutoCallOut
@@ -128,9 +138,11 @@ Mutator=AllTradersMut.AllTradersMut
 Mutator=HUDEffects.HUDEffects
 
 [Settings6 MutLoaderObject]
-GameTypeName=NFNGameType
-GameDifficulty=5.0
-ServerName=NANU NANU CULT | [EU] | NFN-SUICIDAL
+sGameTypeName=NFNGameType
+fGameDifficulty=5.0
+bAppendFaked=false
+bUpdateServerName=true
+sServerName=NANU NANU CULT | [EU] | NFN-SUICIDAL
 Mutator=CleanAppIDMut.CleanAppIDMut
 Mutator=ServerTools.ServerTools
 Mutator=AutoCallOut.AutoCallOut
@@ -159,9 +171,11 @@ Mutator=AllTradersMut.AllTradersMut
 Mutator=HUDEffects.HUDEffects
 
 [Settings7 MutLoaderObject]
-GameTypeName=NFNGameType
-GameDifficulty=7.0
-ServerName=NANU NANU CULT | [EU] | NFN-HELL ON EARTH
+sGameTypeName=NFNGameType
+fGameDifficulty=7.0
+bAppendFaked=false
+bUpdateServerName=true
+sServerName=NANU NANU CULT | [EU] | NFN-HELL ON EARTH
 Mutator=CleanAppIDMut.CleanAppIDMut
 Mutator=ServerTools.ServerTools
 Mutator=AutoCallOut.AutoCallOut
