--- a/System/ServerPerks.ini
+++ b/System/ServerPerks.ini
@@ -37,6 +37,7 @@ Perks=ServerPerksP.SRVetCommando
 Perks=ServerPerksP.SRVetFieldMedic
 Perks=ServerPerksP.SRVetSharpshooter
 Perks=ServerPerksP.SRVetDemolitions
+Perks=ServerPerksP.SRVetFirebug
 TraderInventory=5:KFMod.MP7MPickup
 TraderInventory=5:MGP.MGPPickup
 TraderInventory=5:KFMod.BlowerThrowerPickup
@@ -153,6 +154,8 @@ WeaponCategories=0:Medic Gun
 WeaponCategories=6:Explosive
 WeaponCategories=5:Flame Thrower
 WeaponCategories=7:Misc
+CustomCharacters=HL2Doll.HL2Doll
+CustomCharacters=HL2Doll.HL2Doll_Bloody
 SmileyTags=(iconTexture="ServerPerks.I_Mad",IconTag=">:(",bCaseInsensitive=False)
 SmileyTags=(iconTexture="ServerPerks.I_Frown",IconTag=":(",bCaseInsensitive=False)
 SmileyTags=(iconTexture="ServerPerks.I_GreenLickB",IconTag=":)",bCaseInsensitive=False)
