[release] v9.4 Public Release

--- a/System/KillingFloor.ini
+++ b/System/KillingFloor.ini
@@ -6,6 +6,7 @@
 #######################################################
 
 [Engine.GameEngine]
+ServerActors=CustomServerDetails.CSDMasterServerUplink
 ServerActors=ServerAdsKF.ServerAdsKF
 ServerActors=Acedia.StartUp
 
@@ -44,6 +45,7 @@ bVACSecured=True
 bAllowBehindView=True
 bAdminCanPause=True
 GameDifficulty=7.000000
+bWeaponShouldViewShake=False
 
 [MedicAlert.MedicAlert]
 NameColour=(B=255,G=255,R=255,A=255)
