[misc] Updated CustomServerDetails

--- a/System/CustomServerDetails.ini
+++ b/System/CustomServerDetails.ini
@@ -2,7 +2,7 @@
 bChangeServerDetails=true
 refreshTime=3
 bCustomServerName=false
-serverName="^nbLame ^rServer ^wName %infoBlock%"
+serverName="^nbLame ^rServer ^wName | "
 bMapColor=true
 mapColor="^c"
 bInfoBlockInServerName=true
@@ -19,11 +19,11 @@ infoBlockKeys=(detail="Zeds left",key="zedsLeft")
 infoBlockKeys=(detail="Trader time",key="traderTime")
 infoBlockKeys=(detail="CurrentWave",key="waveCurrent")
 infoBlockKeys=(detail="Waves total",key="wavesTotal")
-displayedServerDetails=(name="IsVacSecured",keyTag="^t",valTag="^o",bChangeName=True,newName="VAC")
-displayedServerDetails=(name="AdminEmail",keyTag="^t",valTag="^o",bChangeName=True,newName="Admin Email")
-displayedServerDetails=(name="AdminName",keyTag="^t",valTag="^o",bChangeName=True,newName="Admin Name")
-displayedServerDetails=(name="MaxSpectators",keyTag="^t",valTag="^o",bChangeName=True,newName="Max Spectators")
-displayedServerDetails=(name="Interested in our Cult?",keyTag="^y",valTag="^r",bCustom=True,customValue="Join the Steam Group")
+displayedServerDetails=(name="IsVacSecured",keyTag="^c",valTag="^o",bChangeName=True,newName="VAC")
+displayedServerDetails=(name="AdminEmail",keyTag="^c",valTag="^o",bChangeName=True,newName="Admin Email")
+displayedServerDetails=(name="AdminName",keyTag="^c",valTag="^o",bChangeName=True,newName="Admin Name")
+displayedServerDetails=(name="MaxSpectators",keyTag="^c",valTag="^o",bChangeName=True,newName="Max Spectators")
+displayedServerDetails=(name="Interested in our Cult?",keyTag="^y",valTag="^v",bCustom=True,customValue="Join the Steam Group")
 displayedServerDetails=(valTag="^r",bCustom=True,customValue="/nanu-nanu")
 playerDeadNicknamePattern=%nickname% ^g[DEAD]
 playerSpectatingNicknamePattern=%nickname% ^g[SPECTATING]
@@ -33,7 +33,7 @@ bColorNicknames=true
 
 [CustomServerDetails.o_Utility]
 ColorList=(Name="Red",Tag="^r",Color=(R=255))
-ColorList=(Name="Teal",Tag="^t",Color=(R=60, B=113,G=179))
+ColorList=(Name="Teal",Tag="^t",Color=(R=60, G=179, B=113))
 ColorList=(Name="Orange",Tag="^o",Color=(R=200,G=77))
 ColorList=(Name="Yellow",Tag="^y",Color=(R=255,G=255))
 ColorList=(Name="Green",Tag="^g",Color=(R=50,G=200,B=50))
