--- a/System/MutLoaderV2.ini
+++ b/System/MutLoaderV2.ini
@@ -5,7 +5,7 @@ sGameTypeName=KFGameType
 fGameDifficulty=1.0
 bAppendFaked=false
 bUpdateServerName=true
-sServerName=NANU NANU CULT | [EU] | BEGINNER | WL
+sServerName=NANU NANU CULT | [EU] | BEGINNER | WL | 
 Mutator=
 
 [Settings2 MutLoaderObject]
@@ -13,7 +13,7 @@ sGameTypeName=KFGameType
 fGameDifficulty=4.0
 bAppendFaked=false
 bUpdateServerName=true
-sServerName=NANU NANU CULT | [EU] | HARD
+sServerName=NANU NANU CULT | [EU] | HARD | 
 Mutator=CleanAppIDMut.CleanAppIDMut
 Mutator=ServerTools.ServerTools
 Mutator=AutoCallOut.AutoCallOut
@@ -46,7 +46,7 @@ sGameTypeName=KFGameType
 fGameDifficulty=5.0
 bAppendFaked=false
 bUpdateServerName=true
-sServerName=NANU NANU CULT | [EU] | SUICIDAL
+sServerName=NANU NANU CULT | [EU] | SUICIDAL | 
 Mutator=CleanAppIDMut.CleanAppIDMut
 Mutator=ServerTools.ServerTools
 Mutator=AutoCallOut.AutoCallOut
@@ -79,7 +79,7 @@ sGameTypeName=KFGameType
 fGameDifficulty=7.0
 bAppendFaked=false
 bUpdateServerName=true
-sServerName=NANU NANU CULT | [EU] | HELL ON EARTH
+sServerName=NANU NANU CULT | [EU] | HELL ON EARTH | 
 Mutator=CleanAppIDMut.CleanAppIDMut
 Mutator=ServerTools.ServerTools
 Mutator=AutoCallOut.AutoCallOut
@@ -112,7 +112,7 @@ sGameTypeName=NFNGameType
 fGameDifficulty=4.0
 bAppendFaked=false
 bUpdateServerName=true
-sServerName=NANU NANU CULT | [EU] | NFN-HARD
+sServerName=NANU NANU CULT | [EU] | NFN-HARD | 
 Mutator=CleanAppIDMut.CleanAppIDMut
 Mutator=ServerTools.ServerTools
 Mutator=AutoCallOut.AutoCallOut
@@ -146,7 +146,7 @@ sGameTypeName=NFNGameType
 fGameDifficulty=5.0
 bAppendFaked=false
 bUpdateServerName=true
-sServerName=NANU NANU CULT | [EU] | NFN-SUICIDAL
+sServerName=NANU NANU CULT | [EU] | NFN-SUICIDAL | 
 Mutator=CleanAppIDMut.CleanAppIDMut
 Mutator=ServerTools.ServerTools
 Mutator=AutoCallOut.AutoCallOut
@@ -180,7 +180,7 @@ sGameTypeName=NFNGameType
 fGameDifficulty=7.0
 bAppendFaked=false
 bUpdateServerName=true
-sServerName=NANU NANU CULT | [EU] | NFN-HELL ON EARTH
+sServerName=NANU NANU CULT | [EU] | NFN-HELL ON EARTH | 
 Mutator=CleanAppIDMut.CleanAppIDMut
 Mutator=ServerTools.ServerTools
 Mutator=AutoCallOut.AutoCallOut
