[release] v9.6 Public Release

--- a/System/MutLoaderV2.ini
+++ b/System/MutLoaderV2.ini
@@ -18,7 +18,7 @@ Mutator=CleanAppIDMut.CleanAppIDMut
 Mutator=ServerTools.ServerTools
 Mutator=AutoCallOut.AutoCallOut
 Mutator=ServerPerksMut.ServerPerksMut
-Mutator=KFWeaponStatConfig.KFWeaponStatConfig
+Mutator=WeaponStatConfig.WeaponStatConfig
 Mutator=KFShareCash.KFShareCashMut
 Mutator=CountryTags.CountryTags
 Mutator=MutVisibleSpecsX.MutVisSpecs
@@ -51,7 +51,7 @@ Mutator=CleanAppIDMut.CleanAppIDMut
 Mutator=ServerTools.ServerTools
 Mutator=AutoCallOut.AutoCallOut
 Mutator=ServerPerksMut.ServerPerksMut
-Mutator=KFWeaponStatConfig.KFWeaponStatConfig
+Mutator=WeaponStatConfig.WeaponStatConfig
 Mutator=KFShareCash.KFShareCashMut
 Mutator=CountryTags.CountryTags
 Mutator=MutVisibleSpecsX.MutVisSpecs
@@ -84,7 +84,7 @@ Mutator=CleanAppIDMut.CleanAppIDMut
 Mutator=ServerTools.ServerTools
 Mutator=AutoCallOut.AutoCallOut
 Mutator=ServerPerksMut.ServerPerksMut
-Mutator=KFWeaponStatConfig.KFWeaponStatConfig
+Mutator=WeaponStatConfig.WeaponStatConfig
 Mutator=KFShareCash.KFShareCashMut
 Mutator=CountryTags.CountryTags
 Mutator=MutVisibleSpecsX.MutVisSpecs
@@ -117,7 +117,7 @@ Mutator=CleanAppIDMut.CleanAppIDMut
 Mutator=ServerTools.ServerTools
 Mutator=AutoCallOut.AutoCallOut
 Mutator=ServerPerksMut.ServerPerksMut
-Mutator=KFWeaponStatConfig.KFWeaponStatConfig
+Mutator=WeaponStatConfig.WeaponStatConfig
 Mutator=KFShareCash.KFShareCashMut
 Mutator=CountryTags.CountryTags
 Mutator=MutVisibleSpecsX.MutVisSpecs
@@ -151,7 +151,7 @@ Mutator=CleanAppIDMut.CleanAppIDMut
 Mutator=ServerTools.ServerTools
 Mutator=AutoCallOut.AutoCallOut
 Mutator=ServerPerksMut.ServerPerksMut
-Mutator=KFWeaponStatConfig.KFWeaponStatConfig
+Mutator=WeaponStatConfig.WeaponStatConfig
 Mutator=KFShareCash.KFShareCashMut
 Mutator=CountryTags.CountryTags
 Mutator=MutVisibleSpecsX.MutVisSpecs
@@ -185,7 +185,7 @@ Mutator=CleanAppIDMut.CleanAppIDMut
 Mutator=ServerTools.ServerTools
 Mutator=AutoCallOut.AutoCallOut
 Mutator=ServerPerksMut.ServerPerksMut
-Mutator=KFWeaponStatConfig.KFWeaponStatConfig
+Mutator=WeaponStatConfig.WeaponStatConfig
 Mutator=KFShareCash.KFShareCashMut
 Mutator=CountryTags.CountryTags
 Mutator=MutVisibleSpecsX.MutVisSpecs
