[misc] Minor change in ColorList

--- a/System/ServerAdsKF.ini
+++ b/System/ServerAdsKF.ini
@@ -36,12 +36,12 @@ bDebug=False
 sURLHost=localhost
 iURLPort=80
 sURLRequest=/serverads.txt
-ColorList=(ColorName="Red",ColorTag="%r",Color=(B=0,G=0,R=200,A=0))
-ColorList=(ColorName="Orange",ColorTag="%o",Color=(B=0,G=127,R=255,A=0))
-ColorList=(ColorName="Yellow",ColorTag="%y",Color=(B=0,G=255,R=255,A=0))
-ColorList=(ColorName="Green",ColorTag="%g",Color=(B=0,G=200,R=0,A=0))
-ColorList=(ColorName="Blue",ColorTag="%b",Color=(B=200,G=100,R=0,A=0))
-ColorList=(ColorName="Violet",ColorTag="%v",Color=(B=139,G=0,R=255,A=0))
-ColorList=(ColorName="White",ColorTag="%w",Color=(B=200,G=200,R=200,A=0))
-ColorList=(ColorName="Teal",ColorTag="%t",Color=(B=113,G=179,R=60,A=0))
+colorList=(ColorName="Red",ColorTag="%r",Color=(B=0,G=0,R=200,A=0))
+colorList=(ColorName="Orange",ColorTag="%o",Color=(B=0,G=127,R=255,A=0))
+colorList=(ColorName="Yellow",ColorTag="%y",Color=(B=0,G=255,R=255,A=0))
+colorList=(ColorName="Green",ColorTag="%g",Color=(B=0,G=200,R=0,A=0))
+colorList=(ColorName="Blue",ColorTag="%b",Color=(B=200,G=100,R=0,A=0))
+colorList=(ColorName="Violet",ColorTag="%v",Color=(B=139,G=0,R=255,A=0))
+colorList=(ColorName="White",ColorTag="%w",Color=(B=200,G=200,R=200,A=0))
+colorList=(ColorName="Teal",ColorTag="%t",Color=(B=113,G=179,R=60,A=0))
 
