[fix] WeaponStatConfig after new update

--- a/System/WeaponStat_Config.ini
+++ b/System/WeaponStat_Config.ini
@@ -1,4 +1,4 @@
-[KFWeaponStatConfig.KFWeaponStatConfig]
+[WeaponStatConfig.WeaponStatConfig]
 bDebug=False
 # FireAnime & ReloadAnime: + To Increase | Low or High Values might break the Animations or make it slow-mo, increase/decrease gradually
 # FireRate & ReloadRate: - To Increase | Low or High Values might break fFireRate or make it slow-mo, increase/decrease gradually
