[release] v9.7 Public Release

--- a/System/MutLoaderV2.ini
+++ b/System/MutLoaderV2.ini
@@ -40,6 +40,7 @@ Mutator=AllTradersMut.AllTradersMut
 Mutator=HUDEffects.HUDEffects
 Mutator=ServerAchievements.SAMutator
 Mutator=PlayerDataStoreMut.PlayerDataStoreMut
+Mutator=ColorfulHUD.ColorfulHUD
 
 [Settings3 MutLoaderObject]
 sGameTypeName=KFGameType
@@ -73,6 +74,7 @@ Mutator=AllTradersMut.AllTradersMut
 Mutator=HUDEffects.HUDEffects
 Mutator=ServerAchievements.SAMutator
 Mutator=PlayerDataStoreMut.PlayerDataStoreMut
+Mutator=ColorfulHUD.ColorfulHUD
 
 [Settings4 MutLoaderObject]
 sGameTypeName=KFGameType
@@ -106,6 +108,7 @@ Mutator=AllTradersMut.AllTradersMut
 Mutator=HUDEffects.HUDEffects
 Mutator=ServerAchievements.SAMutator
 Mutator=PlayerDataStoreMut.PlayerDataStoreMut
+Mutator=ColorfulHUD.ColorfulHUD
 
 [Settings5 MutLoaderObject]
 sGameTypeName=NFNGameType
@@ -140,6 +143,7 @@ Mutator=SetPlayerLoadout.SetPlayerLoadout
 Mutator=AllTradersMut.AllTradersMut
 Mutator=HUDEffects.HUDEffects
 Mutator=PlayerDataStoreMut.PlayerDataStoreMut
+Mutator=ColorfulHUD.ColorfulHUD
 
 [Settings6 MutLoaderObject]
 sGameTypeName=NFNGameType
@@ -174,6 +178,7 @@ Mutator=SetPlayerLoadout.SetPlayerLoadout
 Mutator=AllTradersMut.AllTradersMut
 Mutator=HUDEffects.HUDEffects
 Mutator=PlayerDataStoreMut.PlayerDataStoreMut
+Mutator=ColorfulHUD.ColorfulHUD
 
 [Settings7 MutLoaderObject]
 sGameTypeName=NFNGameType
@@ -208,3 +213,4 @@ Mutator=SetPlayerLoadout.SetPlayerLoadout
 Mutator=AllTradersMut.AllTradersMut
 Mutator=HUDEffects.HUDEffects
 Mutator=PlayerDataStoreMut.PlayerDataStoreMut
+Mutator=ColorfulHUD.ColorfulHUD
