[release] v9.8 Public Release

--- a/System/HUDEffects_Config.ini
+++ b/System/HUDEffects_Config.ini
@@ -2,6 +2,14 @@
 aHUD_Effects[0]=(bSpectatorOverlay=false,bNearDeath=false,bFireOverlay=false,bShittySepia=false,bDoorUseMessage=false,bDoorSealedMessage=false,bZedTimeMessage=false)
 aZED_Effects[0]=(bVomitScreen=false,bSlashOverlay=false)
 aWeapon_Effects[0]=(bSmokeTrail=false)
+# In case you have a custom HUD like SP, ScrN, ColorfulHUD etc... Replace the value below
+# NOTE: You can always check your Server Log, the "HUD TYPE" will be printed by this mutator ;)
+# I can only give you the name of HUD
+# ServerPerks = ServerPerks.SRHUDKillingFloor
+# ScrN = ScrnBalanceSrv.ScrnHUD
+# ColorfulHUD = ColorfulHUD.ColorfulHUD_Base
+# Vanilla = KFMod.HUDKillingFloor
+sHUDType=ColorfulHUD.ColorfulHUD_Base
 ############# Explanation of Variables down below #############
 ############# HUD Related #############
 # bSpectatorOverlay: Removes the Grain filter that shows when you die, or in lobby, or in spectator mode
