[release] v9.9 Public Release

--- a/System/ServerPerks.ini
+++ b/System/ServerPerks.ini
@@ -59,7 +59,7 @@ TraderInventory=1:KFMod.Dual44MagnumPickup
 TraderInventory=1:KFMod.DeaglePickup
 TraderInventory=1:KFMod.DualDeaglePickup
 TraderInventory=3:KFMod.WinchesterPickup
-TraderInventory=3:KFMod.CrossbowPickup
+; TraderInventory=3:KFMod.CrossbowPickup
 TraderInventory=3:KFMod.M14EBRPickup
 TraderInventory=3:KFMod.M99Pickup
 TraderInventory=3:KFMod.SPSniperPickup
@@ -102,7 +102,7 @@ TraderInventory=2:KFMod.GoldenBenelliPickup
 TraderInventory=0:KFMod.GoldenChainsawPickup
 TraderInventory=1:KFMod.GoldenDeaglePickup
 TraderInventory=1:KFMod.GoldenDualDeaglePickup
-TraderInventory=7:KFMod.GoldenFTPickup
+; TraderInventory=7:KFMod.GoldenFTPickup
 TraderInventory=0:KFMod.GoldenKatanaPickup
 TraderInventory=6:KFMod.GoldenM79Pickup
 TraderInventory=4:KFMod.CamoMP5MPickup
