[misc] Follow-up update to v9.9

--- a/System/ServerAdsKF.ini
+++ b/System/ServerAdsKF.ini
@@ -1,19 +1,19 @@
 [ServerAdsKF.ServerAdsKF]
 bEnabled=True
-fDelay=100.000000
-sLines[0]=%rServer Hosted by %wVel-San%r - Contact on Steam for Support
+fDelay=120.00
+sLines[0]=%rServer Hosted by %wVel-San%r - Contact on Steam for Support!
 sLines[1]=%tJoin our 'Steam' Group: %w/groups/%gNanu-Nanu
-sLines[2]=%tWe now have a 'Discord' Server: %wDiscord.gg/%gFAyGJsjgXk
+sLines[2]=%tFull server config can be found in 'Github': %wVel-San/%gkilling-floor-portable
 sLines[3]=%tNo Cheating/Griefing/BMing! This will result in a perma-ban (%wIP%t + %wSteamID%t)
 sLines[4]=%tRemember: Always Stay Grouped!
-sLines[5]=%tServer Has Custom Maps
-sLines[6]=%tServer Has Difficulty Votes
-sLines[7]=%tPlayer outfits in the %w'Misc'%t section of the trader shop
-sLines[8]=%tYou can find %wRevive %t& %wTrader %toptions in your %w'ESC-Menu' %tunder %wServer Tools
-sLines[9]=%tAll DLC Weapons Unlocked
+sLines[5]=%tServer Has Custom Maps!
+sLines[6]=%tServer Has Difficulty Votes!
+sLines[7]=%tPlayer outfits in the %w'Misc'%t section of the trader shop!
+sLines[8]=%tYou can find %wRevive %t& %wTrader %toptions in your %w'ESC-Menu' %tunder %wServer Tools!
+sLines[9]=%tAll DLC Weapons Unlocked!
 sLines[10]=%tServer is NOT White-listed!
 sLines[11]=# SHARE THE NANU NANU KNOWLEDGE, LET THE CULT GROW!
-sLines[12]=%tYou can modify your %w'Reload Options' %tin your %w'ESC-Menu'
+sLines[12]=%tYou can modify your %w'Reload Options' %tin your %w'ESC-Menu'!
 sLines[13]=%tMax Perks level is %w10!%t Grind Hard and share your progress in the group <3!
 sLines[14]=%tServer has Achievements!
 sLines[15]=%tTo rage a %wFleshpound%t... or to not rage a %wFleshpound%t... That is indeed the question.
