--- a/System/HUDEffects_Config.ini
+++ b/System/HUDEffects_Config.ini
@@ -2,6 +2,7 @@
 aHUD_Effects[0]=(bSpectatorOverlay=false,bNearDeath=false,bFireOverlay=false,bShittySepia=false,bDoorUseMessage=false,bDoorSealedMessage=false,bZedTimeMessage=false)
 aZED_Effects[0]=(bVomitScreen=false,bSlashOverlay=false)
 aWeapon_Effects[0]=(bSmokeTrail=false)
+aRequested_Weapons_Effects[0]=(bSPThompsonNoSmoke=false)
 # In case you have a custom HUD like SP, ScrN, ColorfulHUD etc... Replace the value below
 # NOTE: You can always check your Server Log, the "HUD TYPE" will be printed by this mutator ;)
 # I can only give you the name of HUD
@@ -25,3 +26,5 @@ sHUDType=ColorfulHUD.ColorfulHUD_Base
 # bSlashOverlay: Removes Siren/Stalker slash overlay
 ############# Weapon Related #############
 # bSmokeTrail: Smoke that shows after e.g. M32 Grenade Launcher, M79 Grenade Launcher, LAW
+############# Community Requested Weapons Related #############
+# SPThompsonNoSmoke: Removes the barrel smoke when you are firing witht the weapon
