[misc] Added Chat Icons V2 Mutator

--- a/System/MutLoaderV2.ini
+++ b/System/MutLoaderV2.ini
@@ -27,7 +27,6 @@ Mutator=KFHardPatF.KFHardPatF
 Mutator=MultiplePatHPBarMut.MultiplePatHPBarMut
 Mutator=KFDamagePopup.mutDamagePopup
 Mutator=KFEnhancedSyringe.KFEnhancedSyringe
-Mutator=KFARGChat.KFARGChat
 Mutator=MutKillMessage.MutKillMessage
 Mutator=MedicAlert.MedicAlert
 Mutator=RgMsgMut.RgMsgMut
@@ -40,6 +39,7 @@ Mutator=AllTradersMut.AllTradersMut
 Mutator=ServerAchievements.SAMutator
 Mutator=PlayerDataStoreMut.PlayerDataStoreMut
 Mutator=ColorfulHUD.ColorfulHUD
+Mutator=ChatIconV2.ChatIconV2
 Mutator=HUDEffects.HUDEffects
 
 [Settings3 MutLoaderObject]
@@ -61,7 +61,6 @@ Mutator=KFHardPatF.KFHardPatF
 Mutator=MultiplePatHPBarMut.MultiplePatHPBarMut
 Mutator=KFDamagePopup.mutDamagePopup
 Mutator=KFEnhancedSyringe.KFEnhancedSyringe
-Mutator=KFARGChat.KFARGChat
 Mutator=MutKillMessage.MutKillMessage
 Mutator=MedicAlert.MedicAlert
 Mutator=RgMsgMut.RgMsgMut
@@ -74,6 +73,7 @@ Mutator=AllTradersMut.AllTradersMut
 Mutator=ServerAchievements.SAMutator
 Mutator=PlayerDataStoreMut.PlayerDataStoreMut
 Mutator=ColorfulHUD.ColorfulHUD
+Mutator=ChatIconV2.ChatIconV2
 Mutator=HUDEffects.HUDEffects
 
 [Settings4 MutLoaderObject]
@@ -95,7 +95,6 @@ Mutator=KFHardPatF.KFHardPatF
 Mutator=MultiplePatHPBarMut.MultiplePatHPBarMut
 Mutator=KFDamagePopup.mutDamagePopup
 Mutator=KFEnhancedSyringe.KFEnhancedSyringe
-Mutator=KFARGChat.KFARGChat
 Mutator=MutKillMessage.MutKillMessage
 Mutator=MedicAlert.MedicAlert
 Mutator=RgMsgMut.RgMsgMut
@@ -108,6 +107,7 @@ Mutator=AllTradersMut.AllTradersMut
 Mutator=ServerAchievements.SAMutator
 Mutator=PlayerDataStoreMut.PlayerDataStoreMut
 Mutator=ColorfulHUD.ColorfulHUD
+Mutator=ChatIconV2.ChatIconV2
 Mutator=HUDEffects.HUDEffects
 
 [Settings5 MutLoaderObject]
@@ -129,7 +129,6 @@ Mutator=KFHardPatF.KFHardPatF
 Mutator=MultiplePatHPBarMut.MultiplePatHPBarMut
 Mutator=KFDamagePopup.mutDamagePopup
 Mutator=KFEnhancedSyringe.KFEnhancedSyringe
-Mutator=KFARGChat.KFARGChat
 Mutator=MutKillMessage.MutKillMessage
 Mutator=MedicAlert.MedicAlert
 Mutator=RgMsgMut.RgMsgMut
@@ -143,6 +142,7 @@ Mutator=SetPlayerLoadout.SetPlayerLoadout
 Mutator=AllTradersMut.AllTradersMut
 Mutator=PlayerDataStoreMut.PlayerDataStoreMut
 Mutator=ColorfulHUD.ColorfulHUD
+Mutator=ChatIconV2.ChatIconV2
 Mutator=HUDEffects.HUDEffects
 
 [Settings6 MutLoaderObject]
@@ -164,7 +164,6 @@ Mutator=KFHardPatF.KFHardPatF
 Mutator=MultiplePatHPBarMut.MultiplePatHPBarMut
 Mutator=KFDamagePopup.mutDamagePopup
 Mutator=KFEnhancedSyringe.KFEnhancedSyringe
-Mutator=KFARGChat.KFARGChat
 Mutator=MutKillMessage.MutKillMessage
 Mutator=MedicAlert.MedicAlert
 Mutator=RgMsgMut.RgMsgMut
@@ -178,6 +177,7 @@ Mutator=SetPlayerLoadout.SetPlayerLoadout
 Mutator=AllTradersMut.AllTradersMut
 Mutator=PlayerDataStoreMut.PlayerDataStoreMut
 Mutator=ColorfulHUD.ColorfulHUD
+Mutator=ChatIconV2.ChatIconV2
 Mutator=HUDEffects.HUDEffects
 
 [Settings7 MutLoaderObject]
@@ -199,7 +199,6 @@ Mutator=KFHardPatF.KFHardPatF
 Mutator=MultiplePatHPBarMut.MultiplePatHPBarMut
 Mutator=KFDamagePopup.mutDamagePopup
 Mutator=KFEnhancedSyringe.KFEnhancedSyringe
-Mutator=KFARGChat.KFARGChat
 Mutator=MutKillMessage.MutKillMessage
 Mutator=MedicAlert.MedicAlert
 Mutator=RgMsgMut.RgMsgMut
@@ -213,4 +212,5 @@ Mutator=SetPlayerLoadout.SetPlayerLoadout
 Mutator=AllTradersMut.AllTradersMut
 Mutator=PlayerDataStoreMut.PlayerDataStoreMut
 Mutator=ColorfulHUD.ColorfulHUD
+Mutator=ChatIconV2.ChatIconV2
 Mutator=HUDEffects.HUDEffects
