[misc] Added MaxPlayers Mut (12 slots default)

--- a/System/KillingFloor.ini
+++ b/System/KillingFloor.ini
@@ -9,6 +9,7 @@
 ServerActors=CustomServerDetails.CSDMasterServerUplink
 ServerActors=ServerAdsKF.ServerAdsKF
 ServerActors=Acedia.StartUp
+ServerActors=KFMaxPlayers.KFMaxPlayers
 
 [IpDrv.MasterServerUplink]
 SendStats=True
