[add] xBow | FlameThrower + Golden
- Added back disabeld weapons in preparation for a slight nerf

--- a/System/ServerPerks.ini
+++ b/System/ServerPerks.ini
@@ -59,7 +59,7 @@ TraderInventory=1:KFMod.Dual44MagnumPickup
 TraderInventory=1:KFMod.DeaglePickup
 TraderInventory=1:KFMod.DualDeaglePickup
 TraderInventory=3:KFMod.WinchesterPickup
-; TraderInventory=3:KFMod.CrossbowPickup
+TraderInventory=3:KFMod.CrossbowPickup
 TraderInventory=3:KFMod.M14EBRPickup
 TraderInventory=3:KFMod.M99Pickup
 TraderInventory=3:KFMod.SPSniperPickup
@@ -84,6 +84,7 @@ TraderInventory=0:KFMod.DwarfAxePickup
 TraderInventory=2:KFMod.TrenchgunPickup
 TraderInventory=1:KFMod.FlareRevolverPickup
 TraderInventory=1:KFMod.DualFlareRevolverPickup
+TraderInventory=5:KFMod.FlameThrowerPickup
 TraderInventory=4:KFMod.MAC10Pickup
 TraderInventory=7:KFMod.HuskGunPickup
 TraderInventory=6:KFMod.PipeBombPickup
@@ -102,7 +103,7 @@ TraderInventory=2:KFMod.GoldenBenelliPickup
 TraderInventory=0:KFMod.GoldenChainsawPickup
 TraderInventory=1:KFMod.GoldenDeaglePickup
 TraderInventory=1:KFMod.GoldenDualDeaglePickup
-; TraderInventory=7:KFMod.GoldenFTPickup
+TraderInventory=7:KFMod.GoldenFTPickup
 TraderInventory=0:KFMod.GoldenKatanaPickup
 TraderInventory=6:KFMod.GoldenM79Pickup
 TraderInventory=4:KFMod.CamoMP5MPickup
