[release] v10.1 Public Release

--- a/System/AutoCallOut_Config.ini
+++ b/System/AutoCallOut_Config.ini
@@ -1,25 +1,25 @@
 [AutoCallOut.AutoCallOut]
 # Replace %g %w %b with any other color you want from the list below
 # After you write your warning message, use %FP and %SC as the number of Fleshpounds and Scrakes
-sWarningMSG=-----|| %gFP Count: %w %FPx | %bSC Count: %w %SCx ||-----
+sWarningMSG=-----|| %gFleshpounds: %w %FPx %o| %bScrakes: %w %SCx ||-----
 # Name of the FP Sound to play | Add your sounds to the ACO_SNDS.uax (.wav formats)
 sFleshSND=ACO_SNDS.FP_Spawn
 # Name of the SC Scount to play | Add your sounds to the ACO_SNDS.uax (.wav formats)
 sScrakeSND=ACO_SNDS.SC_Spawn
 # Change the Delay/Frequency of each sent warning message. I find 10 Seconds to be optimal
-iDelay=10
+iDelay=6
 # Delay between each FP sound | Seconds
-# If old count of FP before the delay is less than count of FP after the delay
-# No sound will be played
-iDelayFP=5
+iDelayFP=1
 # Delay between each SC sound | Seconds
-# If old count of SC before the delay is less than count of SC after the delay
-# No sound will be played
-iDelaySC=5
+iDelaySC=1
 # If true, sound for FP will play on spawn
 bPlaySoundFP=True
 # If true, sound for SC will play on spawn
 bPlaySoundSC=True
+# Play a sound on every single SC/FP spawn
+# If old count of FP before the delay is less than count of FP after the delay
+# No sound will be played
+iPlayEverySpawn=true
 # Better to keep debugging False :)
 bDebug=False
 # You can add more colors by using the same format of the below ColorList
