--- a/System/AutoCallOut_Config.ini
+++ b/System/AutoCallOut_Config.ini
@@ -7,19 +7,19 @@ sFleshSND=ACO_SNDS.FP_Spawn
 # Name of the SC Scount to play | Add your sounds to the ACO_SNDS.uax (.wav formats)
 sScrakeSND=ACO_SNDS.SC_Spawn
 # Change the Delay/Frequency of each sent warning message. I find 10 Seconds to be optimal
-iDelay=6
+fDelay=5.0
 # Delay between each FP sound | Seconds
-iDelayFP=1
+fDelayFP=0.0
 # Delay between each SC sound | Seconds
-iDelaySC=1
+fDelaySC=0.0
 # If true, sound for FP will play on spawn
 bPlaySoundFP=True
 # If true, sound for SC will play on spawn
 bPlaySoundSC=True
 # Play a sound on every single SC/FP spawn
-# If old count of FP before the delay is less than count of FP after the delay
+# If old count of SC/FP before the delay is less than count of SC/FP after the delay
 # No sound will be played
-iPlayEverySpawn=true
+bPlayEverySpawn=true
 # Better to keep debugging False :)
 bDebug=False
 # You can add more colors by using the same format of the below ColorList
