[misc] Removed colors from ViP tags to avoid Portrait spam
- Portrait spam happens only when you have colors on the tags. This will be fixed later.

--- a/System/AreYouVip_Config.ini
+++ b/System/AreYouVip_Config.ini
@@ -14,13 +14,13 @@ iCutName=6
 # It's best to have only 2 options active at a time, or the scoreboard will
 # act crazy with the fonts and trying to squeeze everything
 # Try to make the label smaller e.g. 3 letters, like VIP
-aSpecialPlayers=(PName="Vel-San",steamID="76561198122568951",Color="%t",isVIP=True,sVIP="%w | %ySeraphiM%w")
-aSpecialPlayers=(PName="Cronus",steamID="76561198372730682",Color="%b",isVIP=True,sVIP="%w | KilleR%w")
-aSpecialPlayers=(PName="Aladin_19",steamID="76561199072992334",Color="%g",isVIP=True,sVIP="%w | ShreddeR%w")
-aSpecialPlayers=(PName="MukaShino",steamID="76561198200384791",Color="%b",isVIP=True,sVIP="%w | BindSpammeR%w")
-aSpecialPlayers=(PName="Dem Zii",steamID="76561198018787866",Color="%b",isVIP=True,sVIP="%w | AcE%w")
-aSpecialPlayers=(PName="Mr. AK",steamID="76561199023028389",Color="%g",isVIP=True,sVIP="%w | Pro%w")
-aSpecialPlayers=(PName="EleNA",steamID="76561197967182915",Color="%p",isVIP=True,sVIP="%w | QueeN%w")
+aSpecialPlayers=(PName="Vel-San",steamID="76561198122568951",Color="",isVIP=True,sVIP=" | Bind SpammeR")
+aSpecialPlayers=(PName="Cronus",steamID="76561198372730682",Color="",isVIP=True,sVIP=" | KilleR")
+aSpecialPlayers=(PName="Aladin_19",steamID="76561199072992334",Color="",isVIP=True,sVIP=" | ShreddeR")
+aSpecialPlayers=(PName="MukaShino",steamID="76561198200384791",Color="",isVIP=True,sVIP=" | BindSpammeR")
+aSpecialPlayers=(PName="Dem Zii",steamID="76561198018787866",Color="",isVIP=True,sVIP=" | AcE")
+aSpecialPlayers=(PName="Mr. AK",steamID="76561199023028389",Color="",isVIP=True,sVIP=" | Pro")
+aSpecialPlayers=(PName="EleNA",steamID="76561197967182915",Color="",isVIP=True,sVIP=" | QueeN")
 # You can add more colors by using the same format of the below ColorList
 ColorList=(ColorName="Red",ColorTag="%r",Color=(B=0,G=0,R=200,A=0))
 ColorList=(ColorName="Orange",ColorTag="%o",Color=(B=0,G=127,R=255,A=0))
