--- a/System/MutLoaderV2.ini
+++ b/System/MutLoaderV2.ini
@@ -5,7 +5,7 @@ sGameTypeName=KFGameType
 fGameDifficulty=1.0
 bAppendFaked=false
 bUpdateServerName=true
-sServerName=NANU NANU CULT | [EU] | BEGINNER | WL | 
+sServerName=NANU NANU | [EU] | BEGINNER | WL | 
 Mutator=
 
 [Settings2 MutLoaderObject]
@@ -13,7 +13,7 @@ sGameTypeName=KFGameType
 fGameDifficulty=4.0
 bAppendFaked=false
 bUpdateServerName=true
-sServerName=NANU NANU CULT | [EU] | HARD | 
+sServerName=NANU NANU | [EU] | HARD | 
 Mutator=CleanAppIDMut.CleanAppIDMut
 Mutator=ServerTools.ServerTools
 Mutator=AutoCallOut.AutoCallOut
@@ -45,7 +45,7 @@ sGameTypeName=KFGameType
 fGameDifficulty=5.0
 bAppendFaked=false
 bUpdateServerName=true
-sServerName=NANU NANU CULT | [EU] | SUICIDAL | 
+sServerName=NANU NANU | [EU] | SUICIDAL | 
 Mutator=CleanAppIDMut.CleanAppIDMut
 Mutator=ServerTools.ServerTools
 Mutator=AutoCallOut.AutoCallOut
@@ -77,7 +77,7 @@ sGameTypeName=KFGameType
 fGameDifficulty=7.0
 bAppendFaked=false
 bUpdateServerName=true
-sServerName=NANU NANU CULT | [EU] | HELL ON EARTH | 
+sServerName=NANU NANU | [EU] | HELL ON EARTH | 
 Mutator=CleanAppIDMut.CleanAppIDMut
 Mutator=ServerTools.ServerTools
 Mutator=AutoCallOut.AutoCallOut
@@ -109,7 +109,7 @@ sGameTypeName=NFNGameType
 fGameDifficulty=4.0
 bAppendFaked=false
 bUpdateServerName=true
-sServerName=NANU NANU CULT | [EU] | NFN-HARD | 
+sServerName=NANU NANU | [EU] | NFN-HARD | 
 Mutator=CleanAppIDMut.CleanAppIDMut
 Mutator=ServerTools.ServerTools
 Mutator=AutoCallOut.AutoCallOut
@@ -142,7 +142,7 @@ sGameTypeName=NFNGameType
 fGameDifficulty=5.0
 bAppendFaked=false
 bUpdateServerName=true
-sServerName=NANU NANU CULT | [EU] | NFN-SUICIDAL | 
+sServerName=NANU NANU | [EU] | NFN-SUICIDAL | 
 Mutator=CleanAppIDMut.CleanAppIDMut
 Mutator=ServerTools.ServerTools
 Mutator=AutoCallOut.AutoCallOut
@@ -175,7 +175,7 @@ sGameTypeName=NFNGameType
 fGameDifficulty=7.0
 bAppendFaked=false
 bUpdateServerName=true
-sServerName=NANU NANU CULT | [EU] | NFN-HELL ON EARTH | 
+sServerName=NANU NANU | [EU] | NFN-HELL ON EARTH | 
 Mutator=CleanAppIDMut.CleanAppIDMut
 Mutator=ServerTools.ServerTools
 Mutator=AutoCallOut.AutoCallOut
