--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-cayman
+title: Nanu Nanu
+description: Portal used to quickly access NN servers, latest updates, live stats & the server config for everyone to view
