other(config): Updated Pickup message
- Removed `Princess`

--- a/System/WeaponPickupMessage.ini
+++ b/System/WeaponPickupMessage.ini
@@ -2,5 +2,4 @@
 NameColour=(B=0,G=155,R=0,A=255)
 WeaponColour=(B=0,G=155,R=0,A=255)
 MessageColour=(B=255,G=255,R=255,A=255)
-WeaponPickupMessage=Princess %name% picked up a %weapon%
-
+WeaponPickupMessage=%name%Â pickedÂ up aÂ %weapon%
