other(config): Updated rage message

--- a/System/RgMsgMut.ini
+++ b/System/RgMsgMut.ini
@@ -1,5 +1,5 @@
 [RgMsgMut.RgMsgMut]
-MsgText=Dumbass %n has raged a fucking %z with %w!
+MsgText=%nÂ hasÂ raged a %zÂ withÂ %w!
 bScrakeMsg=True
 bPoundMsg=True
 TColour=(B=255,G=255,R=255,A=255)
